--- a/navbarstyle.css
+++ b/navbarstyle.css
@@ -1,1 +1,91 @@
 /* hi anna! */
+/*god i'm so so so sorry for this*/
+/* Navbar container */
+			.navbar {
+  				overflow: hidden;
+  				background-color: #12023A;
+  				font-family: "Lato", sans-serif;
+				}
+
+			/* Links inside the navbar */
+			.navbar a {
+  				float: right;
+  				font-size: 16px;
+  				color: white;
+  				text-align: center;
+  				padding: 14px 16px;
+  				text-decoration: none;
+				height: 100%;
+				width: 10%;
+				min-width: 1in;
+				}
+			
+			/* The dropdown container */
+			.dropdown {
+  				float: right;
+  				overflow: hidden;
+				}
+
+			/* Dropdown button */
+			.dropdown .dropbtn {
+  				font-size: 16px;
+  				border: none;
+  				outline: none;
+  				color: white;
+  				padding: 14px 16px;
+  				background-color: inherit;
+  				font-family: inherit; /* Important for vertical align on mobile phones */
+  				margin: 0; /* Important for vertical align on mobile phones */
+				width: 10vw;
+				min-width: 1.4in;
+				}
+
+			/* Add a red background color to navbar links on hover */
+			.navbar a:hover, .dropdown:hover .dropbtn {
+  				background-color: #4E5253;
+				}
+
+			/* Dropdown content (hidden by default) */
+			.dropdown-content {
+  				display: none;
+  				position: absolute;
+  				background-color: #f9f9f9;
+  				min-width: 1in;
+  				/*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+  				z-index: 1;
+				}
+
+			/* Links inside the dropdown */
+			.dropdown-content a {
+  				float: none;
+  				color: black;
+  				padding: 12px 16px;
+  				text-decoration: none;
+  				display: block;
+  				text-align: left;
+  				width: 1.5in;
+				}
+
+			/* Add a grey background color to dropdown links on hover */
+			.dropdown-content a:hover {
+  				background-color: #ddd;
+				}
+
+			/* Show the dropdown menu on hover */
+			.dropdown:hover .dropdown-content {
+ 				display: block;
+			}
+			
+			#logo{
+				float: left;
+				width: 15vw;
+				min-width: 1.5in;
+				margin: 0;
+				border-left: 
+				}
+				
+		@media only screen and (max-width: 6in) {
+  			.navbar{
+  				color: blue;
+  				}
+  				
