--- a/navbarstyle.css
+++ b/navbarstyle.css
@@ -11,6 +11,7 @@
 			.navbar a {
   				float: right;
   				font-size: 16px;
+				font-weight: bold;
   				color: white;
   				text-align: center;
   				padding: 14px 16px;
@@ -29,6 +30,7 @@
 			/* Dropdown button */
 			.dropdown .dropbtn {
   				font-size: 16px;
+				font-weight: bold;
   				border: none;
   				outline: none;
   				color: white;
