--- a/navbarstyle.css
+++ b/navbarstyle.css
@@ -1,93 +1,118 @@
-/* hi anna! */
-/*god i'm so so so sorry for this*/
-/* Navbar container */
-			.navbar {
-  				overflow: hidden;
-  				background-color: #12023A;
-  				font-family: "Lato", sans-serif;
-				}
 
-			/* Links inside the navbar */
-			.navbar a {
-  				float: right;
-  				font-size: 16px;
-				font-weight: bold;
-  				color: white;
-  				text-align: center;
-  				padding: 14px 16px;
-  				text-decoration: none;
-				height: 100%;
-				width: 10%;
-				min-width: 1in;
-				}
-			
-			/* The dropdown container */
-			.dropdown {
-  				float: right;
-  				overflow: hidden;
-				}
+body {margin:0;font-family:Arial}
 
-			/* Dropdown button */
-			.dropdown .dropbtn {
-  				font-size: 16px;
-				font-weight: bold;
-  				border: none;
-  				outline: none;
-  				color: white;
-  				padding: 14px 16px;
-  				background-color: inherit;
-  				font-family: inherit; /* Important for vertical align on mobile phones */
-  				margin: 0; /* Important for vertical align on mobile phones */
-				width: 10vw;
-				min-width: 1.4in;
-				}
+.topnav {
+  overflow: hidden;
+  background-color: #3C4894;
+  font-family: "Lato", Arial, sans-sarif;
+}
 
-			/* Add a red background color to navbar links on hover */
-			.navbar a:hover, .dropdown:hover .dropbtn {
-  				background-color: #4E5253;
-				}
+#logo {
+	float: left;
+	width: 15vw;
+	min-width: 1.5in;
+	margin: 0;
+	border-left: 
+	}
 
-			/* Dropdown content (hidden by default) */
-			.dropdown-content {
-  				display: none;
-  				position: absolute;
-  				background-color: #f9f9f9;
-  				min-width: 1in;
-  				/*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
-  				z-index: 1;
-				}
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-			/* Links inside the dropdown */
-			.dropdown-content a {
-  				float: none;
-  				color: black;
-  				padding: 12px 16px;
-  				text-decoration: none;
-  				display: block;
-  				text-align: left;
-  				width: 1.5in;
-				}
+.topnav a.active {
+  background-color: #C4D0E4;
+  color: #525EAB;
+}
+.topnav a.active:hover{
+  color: white;
+  background-color: #525EAB;
+}
 
-			/* Add a grey background color to dropdown links on hover */
-			.dropdown-content a:hover {
-  				background-color: #ddd;
-				}
+.topnav .icon {
+  display: none;
+}
 
-			/* Show the dropdown menu on hover */
-			.dropdown:hover .dropdown-content {
- 				display: block;
-			}
-			
-			#logo{
-				float: left;
-				width: 15vw;
-				min-width: 1.5in;
-				margin: 0;
-				border-left: 
-				}
-				
-		@media only screen and (max-width: 6in) {
-  			.navbar{
-  				color: blue;
-  				}
-  				
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 6in) {
+  .topnav a, .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 6in) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
